force-app/main/default/objects/Exercise__c/Exercise__c.object-meta.xml
<CustomObject>
    <description>**DO NOT USE**</description>
    <label>Exercise</label>
    <nameField>
        <displayFormat>EXERC{00000}</displayFormat>
        <label>Exercise Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exercises</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>