force-app/main/default/objects/Exercise__c/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName>Animal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Animal</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Animal__c.Animal_Status__c</field>
            <operation>notEqual</operation>
            <value>Deceased</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Exercises</relationshipLabel>
    <relationshipName>Exercises</relationshipName>
    <type>Lookup</type>
</CustomField>