force-app/main/default/objects/Exercise__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Any comments about the exercises for the animal?</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>