force-app/main/default/objects/Exercise__c/fields/Date_and_Time_of_Exercise__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Time_of_Exercise__c</fullName>
    <label>Date and Time of Exercise</label>
    <type>DateTime</type>
</CustomField>