force-app/main/default/objects/Exercise__c/fields/Duration_Hours__c.field-meta.xml
<CustomField>
    <fullName>Duration_Hours__c</fullName>
    <label>Duration (Hours)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>