force-app/main/default/objects/Exercise__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <formula>Date_and_Time_of_Exercise__c + (Duration_Hours__c/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date Time</label>
    <type>DateTime</type>
</CustomField>