force-app/main/default/objects/Exercise__c/fields/Exercise_Action__c.field-meta.xml
<CustomField>
    <fullName>Exercise_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The related exercise action</inlineHelpText>
    <label>Exercise Action</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Animal_Action__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Exercise</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Animal_Action__c</referenceTo>
    <relationshipLabel>Exercises</relationshipLabel>
    <relationshipName>Exercises</relationshipName>
    <type>Lookup</type>
</CustomField>